src/travel/videolibrary.module.scss
@import "../../themes/colors.module";
@import "../../themes/breakpoints";

.headingDash {
	width: 80%;
}

.videoButton {
	position: absolute;
	top: 75%;
	left: 50%;
	border-radius: 50%;
	transform: translate(-50%, -50%);
	transition: linear 150ms;
	opacity: 0.8;
	filter: drop-shadow(0px 0px 10px #000000);
	color: white;

	@include breakpoint(medium) {
		opacity: 0;
	}

	&:hover {
		filter: brightness(0.9);
		filter: drop-shadow(0px 0px 5px #000000);
	}
}

.newestVideo {
	position: absolute;
	text-align: center;
	margin: 0;
	padding: 0.25rem 0;
	width: 100%;
	background-color: $defaultYellow;
	color: black;
	opacity: 0.85;
	border-radius: 4px 4px 0 0;
}

.watched {
	position: absolute;
	text-align: center;
	bottom: -15px;
	right: -10px;
	color: $defaultYellow;
}

.videoCardContainer {
	position: relative;
	transition: linear 200ms;
	cursor: pointer;
	border-radius: 10px;
	width: 200px;

	&:hover,
	&:focus {
		filter: brightness(1.2);
		.videoButton {
			opacity: 0.7;
		}
	}
}

.videoCardImage {
	border-radius: 0.325rem;
	box-shadow: $defaultShadow;
	max-height: 300px;
}

.loadingContainer {
	margin-top: -7px;
	height: 5px;
	color: $defaultYellow;
}

